Doc/force-app/main/default/objects/Contact/fields/Most_Recent_SalesLoft_Cadence_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_SalesLoft_Cadence_Timestamp__c</fullName>
    <label>Most Recent SalesLoft Cadence Timestamp</label>
    <type>DateTime</type>
</CustomField>