Doc/force-app/main/default/objects/Contact/fields/neverBounceValidationResult__c.field-meta.xml
<CustomField>
    <fullName>neverBounceValidationResult__c</fullName>
    <description>CR#45344</description>
    <label>neverBounceValidationResult</label>
    <length>160</length>
    <type>Text</type>
</CustomField>