Doc/force-app/main/default/objects/Contact/fields/OMP_CRM_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>OMP_CRM_Certification_Expiration__c</fullName>
    <label>OMP–CRM Certification Expiration</label>
    <type>Date</type>
</CustomField>