Doc/force-app/main/default/objects/Contact/fields/OMP_Relationships_Certification_Expirati__c.field-meta.xml
<CustomField>
    <fullName>OMP_Relationships_Certification_Expirati__c</fullName>
    <label>OMP–Relationships Certification Exp.</label>
    <type>Date</type>
</CustomField>