Doc/force-app/main/default/objects/Contact/fields/Online_Resources_Password__c.field-meta.xml
<CustomField>
    <fullName>Online_Resources_Password__c</fullName>
    <description>Password for CCRC</description>
    <label>Online Resources Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>