Doc/force-app/main/default/objects/Contact/fields/Online_Resources_Posts__c.field-meta.xml
<CustomField>
    <fullName>Online_Resources_Posts__c</fullName>
    <description>Number of posts this user has made to the Customer Community</description>
    <label>Online Resources Posts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>