Doc/force-app/main/default/objects/Contact/fields/Open_Cloud_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Open_Cloud_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SC-000037</description>
    <label>Open Cloud Administrator</label>
    <type>Checkbox</type>
</CustomField>