Doc/force-app/main/default/objects/Contact/fields/Original_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Original_Opt_Out__c</fullName>
    <label>Original Opt Out</label>
    <type>Date</type>
</CustomField>