Doc/force-app/main/default/objects/Contact/fields/Outage_Maintenance_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Outage_Maintenance_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SC-000040</description>
    <label>Outage/Maintenance Opt In</label>
    <type>Checkbox</type>
</CustomField>