Doc/force-app/main/default/objects/Contact/fields/Owner_of_Open_opp_ty__c.field-meta.xml
<CustomField>
    <fullName>Owner_of_Open_opp_ty__c</fullName>
    <label>Owner of Open opp-ty</label>
    <type>Email</type>
</CustomField>