Doc/force-app/main/default/objects/Contact/fields/PCC_information_area__c.field-meta.xml
<CustomField>
    <fullName>PCC_information_area__c</fullName>
    <label>PCC information area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>