Doc/force-app/main/default/objects/Contact/fields/Power_of_1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Contact__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of 1 (Contact)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>