Doc/force-app/main/default/objects/Contact/fields/Reference_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reference_Notes__c</fullName>
    <label>Reference Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>