Doc/force-app/main/default/objects/Contact/fields/Reference_Products__c.field-meta.xml
<CustomField>
    <fullName>Reference_Products__c</fullName>
    <label>Reference Products/Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conflicts</fullName>
            </value>
            <value>
                <fullName>Conflicts - Cloud</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Experience - Cloud</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Flow - Cloud</fullName>
            </value>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Intake – Cloud</fullName>
            </value>
            <value>
                <fullName>Integrate</fullName>
            </value>
            <value>
                <fullName>Integrate - Cloud</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
            <value>
                <fullName>Terms - Cloud</fullName>
            </value>
            <value>
                <fullName>Total Time Management</fullName>
            </value>
            <value>
                <fullName>Total Time Management - Cloud</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>R2i Services</fullName>
            </value>
            <value>
                <fullName>Intapp Client Success platform</fullName>
                <isActive>false</isActive>
                <label>Intapp Client Success platform</label>
            </value>
            <value>
                <fullName>Intapp Flow</fullName>
                <isActive>false</isActive>
                <label>Intapp Flow</label>
            </value>
            <value>
                <fullName>Intapp Integrate</fullName>
                <isActive>false</isActive>
                <label>Intapp Integrate</label>
            </value>
            <value>
                <fullName>Intapp Open Conflicts</fullName>
                <isActive>false</isActive>
                <label>Intapp Open Conflicts</label>
            </value>
            <value>
                <fullName>Intapp Open Experience</fullName>
                <isActive>false</isActive>
                <label>Intapp Open Experience</label>
            </value>
            <value>
                <fullName>Intapp Open Intake</fullName>
                <isActive>false</isActive>
                <label>Intapp Open Intake</label>
            </value>
            <value>
                <fullName>Intapp Open Terms of Business</fullName>
                <isActive>false</isActive>
                <label>Intapp Open Terms of Business</label>
            </value>
            <value>
                <fullName>Intapp Pricing</fullName>
                <isActive>false</isActive>
                <label>Intapp Pricing</label>
            </value>
            <value>
                <fullName>Intapp Total Time Management (On Premise)</fullName>
                <isActive>false</isActive>
                <label>Intapp Total Time Management (On Premise)</label>
            </value>
            <value>
                <fullName>Intapp Total Time Management (Time Cloud)</fullName>
                <isActive>false</isActive>
                <label>Intapp Total Time Management (Time Cloud)</label>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
                <isActive>false</isActive>
                <label>Intapp Walls</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>