Doc/force-app/main/default/objects/Contact/fields/Reference_Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Reference_Tracking_Status__c</fullName>
    <label>Reference Tracking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nominated</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>