Doc/force-app/main/default/objects/Contact/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-3 minute  Testimonial video for use on intapp.com and at Intapp events</fullName>
            </value>
            <value>
                <fullName>Customer  quote on business impact and/or success metrics achieved for use on  intapp.com and in Intapp presentation decks</fullName>
            </value>
            <value>
                <fullName>One-page  customer success summary focused on business impact, outcomes and  success metrics achieved for use on intapp.com</fullName>
            </value>
            <value>
                <fullName>One-slide  summary on project, impact and outcomes for use on intapp.com and  presentation decks</fullName>
            </value>
            <value>
                <fullName>Participate  in peer to peer roundtables to share your experiences</fullName>
            </value>
            <value>
                <fullName>Quote on go  live experience and your success metrics for use on intapp.com</fullName>
            </value>
            <value>
                <fullName>Quote on go  live experience and your success metrics for use in Intapp sales  presentation decks</fullName>
            </value>
            <value>
                <fullName>Sales reference call with prospective Intapp customers</fullName>
            </value>
            <value>
                <fullName>Speaking opportunities at Intapp or Third Party Industry events</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>