Doc/force-app/main/default/objects/Contact/fields/Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength__c</fullName>
    <label>Relationship Strength</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0 – Never Met</fullName>
            </value>
            <value>
                <fullName>1 – Acquaintance OR Poor opinions</fullName>
            </value>
            <value>
                <fullName>2 – Basic rel. OR Inhibiting Opinions</fullName>
            </value>
            <value>
                <fullName>3 – Working Relationship</fullName>
            </value>
            <value>
                <fullName>4 – Good Relationship</fullName>
            </value>
            <value>
                <fullName>5 – Excellent Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>