Doc/force-app/main/default/objects/Contact/fields/rh2__Formula_Test__c.field-meta.xml
<CustomField>
    <fullName>rh2__Formula_Test__c</fullName>
    <formula>rh2__Currency_Test__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>