Doc/force-app/main/default/objects/Contact/fields/Role_old__c.field-meta.xml
<CustomField>
    <fullName>Role_old__c</fullName>
    <description>2007 firm role project</description>
    <label>Role_old</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT Leader</fullName>
            </value>
            <value>
                <fullName>Integration Leader</fullName>
            </value>
            <value>
                <fullName>IT Staff</fullName>
            </value>
            <value>
                <fullName>IT Security</fullName>
            </value>
            <value>
                <fullName>Risk Leader</fullName>
            </value>
            <value>
                <fullName>Risk Staff / Conflicts</fullName>
            </value>
            <value>
                <fullName>Records</fullName>
            </value>
            <value>
                <fullName>Firm Management</fullName>
            </value>
            <value>
                <fullName>Finance Management</fullName>
            </value>
            <value>
                <fullName>Finance Staff</fullName>
            </value>
            <value>
                <fullName>Business Development Leader</fullName>
            </value>
            <value>
                <fullName>Marketing Leader</fullName>
            </value>
            <value>
                <fullName>Pricing Leader</fullName>
            </value>
            <value>
                <fullName>Business Development Staff</fullName>
            </value>
            <value>
                <fullName>Marketing Staff</fullName>
            </value>
            <value>
                <fullName>Pricing Staff</fullName>
            </value>
            <value>
                <fullName>Knowledge Leader</fullName>
            </value>
            <value>
                <fullName>Managing Partner</fullName>
            </value>
            <value>
                <fullName>Non-Law Firm Risk Leader</fullName>
                <label>Non-Sales Risk Ecosystem</label>
            </value>
            <value>
                <fullName>PGL - Litigation</fullName>
            </value>
            <value>
                <fullName>PGL - Health Care</fullName>
            </value>
            <value>
                <fullName>PGL - Capital Markets</fullName>
            </value>
            <value>
                <fullName>PGL - Corporate</fullName>
            </value>
            <value>
                <fullName>PGL - Labor/Employment</fullName>
            </value>
            <value>
                <fullName>PGL - M&amp;A</fullName>
            </value>
            <value>
                <fullName>APRL Member</fullName>
            </value>
            <value>
                <fullName>Tech Partner</fullName>
            </value>
            <value>
                <fullName>Corp Law Dept</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Purchasing Dept.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>