Doc/force-app/main/default/objects/Contact/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>Social Media</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Twitter - Follower</fullName>
            </value>
            <value>
                <fullName>Twitter - Promoter</fullName>
            </value>
            <value>
                <fullName>Twitter - Critic</fullName>
            </value>
            <value>
                <fullName>LinkedIn - Follower (Corp)</fullName>
            </value>
            <value>
                <fullName>LinkedIn - Member (IB UG)</fullName>
            </value>
            <value>
                <fullName>LinkedIn - Critic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>