Doc/force-app/main/default/objects/Contact/fields/Splash_Hard_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Splash_Hard_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Splash bounce-backs to flag in salesforce.
Ticket #30447
Jason Wood</description>
    <label>Splash Hard Bounce</label>
    <type>Checkbox</type>
</CustomField>