Doc/force-app/main/default/objects/Contact/fields/Standard_Firm_Role__c.field-meta.xml
<CustomField>
    <fullName>Standard_Firm_Role__c</fullName>
    <formula>IF(
  OR(
    INCLUDES(Role_old__c, &quot;Finance Staff&quot;),
    INCLUDES(Role_old__c, &quot;Finance Management&quot;),
    INCLUDES(Role_old__c, &quot;Firm Management&quot;),
    INCLUDES(Role_old__c, &quot;Managing Parnter&quot;)
  ),
  &quot;Finance&quot;,
IF(
  OR(
    INCLUDES(Role_old__c, &quot;Risk Staff / Conflicts&quot;),
    INCLUDES(Role_old__c, &quot;Records&quot;),
    INCLUDES(Role_old__c, &quot;Risk Leader&quot;),
    INCLUDES(Role_old__c, &quot;Intake Leader&quot;),
    INCLUDES(Role_old__c, &quot;IT Security&quot;),
    INCLUDES(Role_old__c, &quot;Non-Law Firm Risk Leader&quot;)
  ),
  &quot;Risk&quot;,
IF(
  OR(
    INCLUDES(Role_old__c, &quot;IT Staff&quot;),
    INCLUDES(Role_old__c, &quot;IT Leader&quot;),
    INCLUDES(Role_old__c, &quot;Integration Leader&quot;)
  ),
  &quot;IT&quot;,
  &quot;&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Firm Role</label>
    <type>Text</type>
</CustomField>