Doc/force-app/main/default/objects/Contact/fields/Standard_Title__c.field-meta.xml
<CustomField>
    <fullName>Standard_Title__c</fullName>
    <label>Standard Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Senior Partner / Chairman</fullName>
            </value>
            <value>
                <fullName>2. CEO / MP / President</fullName>
            </value>
            <value>
                <fullName>3. Sector Group Leader / Industry Group Leader</fullName>
            </value>
            <value>
                <fullName>4. Client Relationship Partner / Key Client Partner</fullName>
            </value>
            <value>
                <fullName>5. PGL</fullName>
            </value>
            <value>
                <fullName>6. COO / Executive Director / EVP</fullName>
            </value>
            <value>
                <fullName>7. CFO / Finance Director / SVP</fullName>
            </value>
            <value>
                <fullName>8. GC / Risk Partner / CCO / CRO</fullName>
            </value>
            <value>
                <fullName>9. CIO / CTO / IT Director</fullName>
            </value>
            <value>
                <fullName>10. CMO / Marketing Leader / Business Development Leader</fullName>
            </value>
            <value>
                <fullName>11. Pricing Leader</fullName>
            </value>
            <value>
                <fullName>12. CHRO / HR Leader</fullName>
            </value>
            <value>
                <fullName>13. Knowledge Leader / Information Services Leader</fullName>
            </value>
            <value>
                <fullName>14. Partner and Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>