Doc/force-app/main/default/objects/Contact/fields/Synced_to_OA__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_OA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE = Contact is synced to OA</description>
    <inlineHelpText>TRUE = Contact is synced to OA</inlineHelpText>
    <label>Synced to OA</label>
    <type>Checkbox</type>
</CustomField>