Doc/force-app/main/default/objects/Contact/fields/TB_Reference_Usage_Info__c.field-meta.xml
<CustomField>
    <fullName>TB_Reference_Usage_Info__c</fullName>
    <defaultValue>&quot;Anything special you should note about using this person as a revenue reference.&quot;</defaultValue>
    <description>Describe anything special to note about using this person as a revenue reference.</description>
    <inlineHelpText>Describe anything special to note about using this person as a revenue reference.</inlineHelpText>
    <label>TB Reference Usage Info</label>
    <type>TextArea</type>
</CustomField>