Doc/force-app/main/default/objects/Contact/fields/times_used_as_a_reference__c.field-meta.xml
<CustomField>
    <fullName>times_used_as_a_reference__c</fullName>
    <inlineHelpText>How many times has this Contact being used as a reference?</inlineHelpText>
    <label>#times used as a reference</label>
    <summaryForeignKey>Reference_Event__c.Prospect_Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>