Doc/force-app/main/default/objects/Contact/fields/utm_medium__c.field-meta.xml
<CustomField>
    <fullName>utm_medium__c</fullName>
    <description>CR#45344</description>
    <label>utm_medium</label>
    <length>160</length>
    <type>Text</type>
</CustomField>