Doc/force-app/main/default/objects/Contact/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>CR#45344</description>
    <label>utm_source</label>
    <length>160</length>
    <type>Text</type>
</CustomField>