Doc/force-app/main/default/objects/Contact/fields/Walls_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Walls_Certification_Expiration__c</fullName>
    <label>Walls Certification Expiration</label>
    <type>Date</type>
</CustomField>