Doc/force-app/main/default/objects/Contact/fields/Walls_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Walls_Expertise__c</fullName>
    <description>This field is used to determine what the technical expertise is for contacts that open support cases. The support team is responsible for maintaining this field.</description>
    <label>Walls Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Knowledgeable</fullName>
            </value>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>Accomplished</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>