Doc/force-app/main/default/objects/Contact/fields/WB_Reference_Usage_Info__c.field-meta.xml
<CustomField>
    <fullName>WB_Reference_Usage_Info__c</fullName>
    <defaultValue>&quot;Indicate any special notes about this risk reference.&quot;</defaultValue>
    <description>Describes anything you should know about using them as a risk reference.</description>
    <inlineHelpText>Describes anything you should know about using them as a risk reference.</inlineHelpText>
    <label>WB Reference Usage Info</label>
    <type>TextArea</type>
</CustomField>