Doc/force-app/main/default/objects/Contact/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>