Doc/force-app/main/default/objects/Contact/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <description>This is the main record type that should be used for all external contacts, and for internal contacts that do not act as resources in Financial Force. When in doubt - pick this record type.</description>
    <label>Contact</label>
</RecordType>