Doc/force-app/main/default/objects/Contact/validationRules/Cannot_be_contact_and_be_a_resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_contact_and_be_a_resource</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;),
  RecordTypeId = &apos;01250000000HlKN&apos;,
  Is_Resource__c = TRUE
)</errorConditionFormula>
    <errorMessage>Please deactivate the resource before converting record types.</errorMessage>
</ValidationRule>