Doc/force-app/main/default/objects/Contact/validationRules/Delegate_Approval_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Delegate_Approval_Dates_Required</fullName>
    <active>false</active>
    <description>The Delegate Approval date fields are required when a Delegate Approver has been selected.</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(Delegate_Approver__c)), 
OR( 
ISBLANK(Delegate_Approval_End__c), 
ISBLANK(Delegate_Approval_Start__c) 
) 
)</errorConditionFormula>
    <errorDisplayField>Delegate_Approver__c</errorDisplayField>
    <errorMessage>You must fill out the Delegated Approval Start and End Date if you have a Delegated Approver specified.</errorMessage>
</ValidationRule>