Doc/force-app/main/default/objects/Contact/validationRules/If_resource_inactive_require_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>If_resource_inactive_require_end_date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT($Profile.Id=&quot;00e30000000bvR3&quot;),
  ISCHANGED(Is_Resource_Active__c),
  Is_Resource_Active__c = False,
  ISBLANK(Last_Date__c)
)</errorConditionFormula>
    <errorMessage>Please populate the last date for this resource</errorMessage>
</ValidationRule>